# axicor_enterprise

./: .geminiignore  .gitignore  AGENTS.md  AxiCAD_layouts.md  CLA.md  CONTRIBUTING.md  GEMINI.md  LICENSE.md  PUBLISHING_CHECKLIST.md  README.md  SECURITY.md  TODO.md  TRADEMARKS.md
AxiEngine/: Cargo.toml
AxiEngine/crates/baker/: Cargo.toml
AxiEngine/crates/baker-cli/: Cargo.toml
AxiEngine/crates/baker-cli/src/: main.rs
AxiEngine/crates/baker-cli/tests/: cli_tests.rs
AxiEngine/crates/baker/src/: dto.rs  error.rs  lib.rs  pipeline.rs
AxiEngine/crates/baker/tests/: baker_tests.rs
AxiEngine/crates/boot/: Cargo.toml
AxiEngine/crates/boot/src/: constants.rs  dto.rs  error.rs  lib.rs  loader.rs
AxiEngine/crates/boot/tests/: boot_tests.rs
AxiEngine/crates/compute/: Cargo.toml
AxiEngine/crates/compute-api/: Cargo.toml
AxiEngine/crates/compute-api/src/: backend.rs  capabilities.rs  dto.rs  error.rs  handle.rs  kind.rs  lib.rs  validation.rs
AxiEngine/crates/compute-api/tests/: compute_api_tests.rs
AxiEngine/crates/compute-cpu/: Cargo.toml
AxiEngine/crates/compute-cpu/examples/: compute_cpu_probe.rs
AxiEngine/crates/compute-cpu/src/: aligned_mem.rs  config.rs  lib.rs  resource.rs  simulation.rs
AxiEngine/crates/compute-cpu/tests/: compute_cpu_tests.rs
AxiEngine/crates/compute-cuda/: Cargo.toml  build.rs
AxiEngine/crates/compute-cuda/src/: lib.rs  native.rs  resource.rs  tests.rs
AxiEngine/crates/compute/src/: engine.rs  error.rs  lib.rs  lifecycle.rs  mock.rs  preference.rs
AxiEngine/crates/compute/tests/: compute_tests.rs
AxiEngine/crates/config/: Cargo.toml
AxiEngine/crates/config/src/: dto.rs  error.rs  lib.rs  validation.rs
AxiEngine/crates/config/tests/: tests.rs
AxiEngine/crates/ipc/: Cargo.toml
AxiEngine/crates/ipc/src/: lib.rs
AxiEngine/crates/ipc/tests/: ipc_tests.rs
AxiEngine/crates/layout/: Cargo.toml
AxiEngine/crates/layout/src/: burst.rs  constants.rs  error.rs  headers.rs  lib.rs  offsets.rs  variant.rs  vram.rs
AxiEngine/crates/layout/tests/: layout_tests.rs
AxiEngine/crates/node/: Cargo.toml
AxiEngine/crates/node/src/: main.rs
AxiEngine/crates/node/tests/: node_tests.rs
AxiEngine/crates/physics/: Cargo.toml
AxiEngine/crates/physics/examples/: physics_probe.rs
AxiEngine/crates/physics/src/: aot.rs  axon.rs  constants.rs  error.rs  glif.rs  gsop.rs  lib.rs
AxiEngine/crates/physics/tests/: physics_tests.rs
AxiEngine/crates/runtime/: Cargo.toml
AxiEngine/crates/runtime/src/: dto.rs  error.rs  lib.rs  local.rs
AxiEngine/crates/runtime/tests/: runtime_tests.rs
AxiEngine/crates/test-harness/: Cargo.toml
AxiEngine/crates/test-harness/examples/: heatmap_experiment.rs
AxiEngine/crates/test-harness/src/: abi.rs  compare.rs  fixture.rs  lib.rs  mock.rs  mvp_cpu_replay.rs  outcome.rs  (+1 more)
AxiEngine/crates/topology/: Cargo.toml
AxiEngine/crates/types/: Cargo.toml
AxiEngine/crates/vfs/: Cargo.toml
AxiEngine/crates/weaver-daemon/: Cargo.toml
AxiEngine/crates/wire/: Cargo.toml
AxiEngine/scratch/: migrate.py
AxiEngine/tools/axi-viewer/: capture.js  index.html  package-lock.json  package.json  sweep.js
dev-rust-api/: Cargo.toml  cargo_errors.txt
dev-rust-api/baker/: Cargo.toml
dev-rust-api/baker-cli/: Cargo.toml
dev-rust-api/baker-cli/src/: main.rs
dev-rust-api/baker-cli/tests/: cli.rs
dev-rust-api/baker/src/: error.rs  lib.rs  pipeline.rs  serialization.rs  validator.rs
dev-rust-api/boot/: Cargo.toml
dev-rust-api/boot/src/: error.rs  lib.rs  pipeline.rs
dev-rust-api/compute/: Cargo.toml
dev-rust-api/compute-api/: Cargo.toml
dev-rust-api/compute-api/src/: error.rs  lib.rs  traits.rs  types.rs
dev-rust-api/compute-cpu/: Cargo.toml
dev-rust-api/compute-cpu/src/: backend.rs  lib.rs  memory.rs
dev-rust-api/compute-cuda/: Cargo.toml  build.rs
dev-rust-api/compute-cuda/src/: backend.rs  ffi.rs  lib.rs  mock.rs
dev-rust-api/compute-hip/: Cargo.toml  build.rs
dev-rust-api/compute-hip/src/: backend.rs  ffi.rs  lib.rs  mock.rs
dev-rust-api/compute/src/: engine.rs  factory.rs  lib.rs
dev-rust-api/config/: Cargo.toml
dev-rust-api/config/src/: anatomy.rs  blueprints.rs  department.rs  error.rs  lib.rs  manifest.rs  shard.rs  simulation.rs
dev-rust-api/edge-model/: Cargo.toml
dev-rust-api/edge-model/src/: distill.rs  error.rs  export.rs  lib.rs
dev-rust-api/examples/octopus_bench/: README.md  octopus.py
dev-rust-api/ipc/: Cargo.toml
dev-rust-api/ipc/src/: constants.rs  ephys.rs  error.rs  lib.rs  manifest.rs  mock.rs  platform.rs  shadow.rs  shm.rs  sockets.rs  utils.rs
dev-rust-api/layout/: Cargo.toml
dev-rust-api/layout/src/: error.rs  lib.rs  offsets.rs
dev-rust-api/net/: Cargo.toml
dev-rust-api/net/src/: bsp.rs  error.rs  external.rs  geometry.rs  io.rs  lib.rs  node.rs  routing.rs  telemetry.rs  worker.rs
dev-rust-api/node/: Cargo.toml
dev-rust-api/node/src/: main.rs
dev-rust-api/physics/: Cargo.toml
dev-rust-api/physics/src/: aot.rs  constants.rs  glif.rs  gsop.rs  lib.rs  tail.rs
dev-rust-api/protocol/: Cargo.toml
dev-rust-api/protocol/src/: error.rs  lib.rs  math.rs  reassembly.rs
dev-rust-api/runtime/: Cargo.toml
dev-rust-api/runtime/src/: engine.rs  error.rs  lib.rs  sentinel.rs  state.rs  worker.rs
dev-rust-api/test-harness/: Cargo.toml
dev-rust-api/test-harness/src/: error.rs  ffi.rs  lib.rs  runner.rs
dev-rust-api/topology/: Cargo.toml
dev-rust-api/topology/src/: error.rs  lib.rs  placement.rs  routing.rs  sprouting.rs  tracing.rs  types.rs
dev-rust-api/transport/: Cargo.toml
dev-rust-api/transport/src/: egress.rs  error.rs  lib.rs  ring_buffer.rs  strategy.rs
dev-rust-api/types/: Cargo.toml
dev-rust-api/types/src/: aliases.rs  constants.rs  entropy.rs  flags.rs  lib.rs  position.rs  target.rs
dev-rust-api/vfs/: Cargo.toml
dev-rust-api/vfs/src/: archive.rs  constants.rs  error.rs  lib.rs
dev-rust-api/weaver-daemon/: Cargo.toml
dev-rust-api/weaver-daemon/src/: compaction.rs  main.rs  worker.rs
dev-rust-api/wire/: Cargo.toml  build.rs
dev-rust-api/wire/src/: error.rs  fast_path.rs  io.rs  lib.rs  macros.rs
(+557 files in other folders)
