[workspace]
members = [
    "crates/types",
    "crates/physics",
    "crates/layout",
    "crates/config",
    "crates/compute-api",
    "crates/compute-cpu",
    "crates/compute-cuda",
    "crates/test-harness",
    "crates/compute",
    "crates/topology",
    "crates/baker",
    "crates/vfs",
    "crates/boot",
    "crates/runtime",
    "crates/baker-cli",
]
resolver = "2"
