[package]
name = "baker-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "baker-cli"
path = "src/main.rs"

[dependencies]
# Internal crates
baker = { path = "../baker" }
edge-model = { path = "../edge-model" }
vfs = { path = "../vfs" }

# External dependencies
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "=3.10.1"
types = { path = "../types" }
layout = { path = "../layout" }
