[package]
name = "baker"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
# Internal crates
types    = { path = "../types" }
layout   = { path = "../layout" }
config   = { path = "../config" }
wire     = { path = "../wire" }
vfs      = { path = "../vfs" }
topology = { path = "../topology" }
physics  = { path = "../physics" }

# External crates
anyhow   = { workspace = true }
tracing  = { workspace = true }
bytemuck = { workspace = true }
tempfile = { workspace = true }
rand = "=0.8.5"
rand_chacha = "=0.3.1"
toml = { workspace = true }

