[package]
name = "compute-cpu"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
compute-api = { path = "../compute-api" }
types = { path = "../types" }
layout = { path = "../layout" }
physics = { path = "../physics" }
rayon = { workspace = true }
bytemuck = { workspace = true }
slotmap = "1.0.7"
