[package]
name = "compute-cuda"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
compute-api = { path = "../compute-api" }
layout = { path = "../layout" }
slotmap = "1.0.7"
bytemuck = { workspace = true }

[build-dependencies]
cc = "1.0"

[features]
default = []
mock-gpu = []

