[package]
name = "ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
types = { path = "../types" }
layout = { path = "../layout" }
wire = { path = "../wire" }
memmap2 = { workspace = true }
libc = { workspace = true }
bytemuck = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
