[package]
name = "net"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
types = { path = "../types" }
layout = { path = "../layout" }
wire = { path = "../wire" }
protocol = { path = "../protocol" }
transport = { path = "../transport" }
crossbeam = "0.8.4"
tokio = { workspace = true }
axum = "0.7.9"
tracing = { workspace = true }
bytemuck = { workspace = true }

