[package]
name = "node"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = "0.3"
ctrlc = "3.4"
crossbeam = "0.8"

# Internal workspace crates
boot = { path = "../boot" }
runtime = { path = "../runtime" }
compute = { path = "../compute" }
compute-api = { path = "../compute-api" }
