[package]
name = "runtime"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
compute = { path = "../compute" }
compute-api = { path = "../compute-api" }
types = { path = "../types" }
layout = { path = "../layout" }
config = { path = "../config" }
net = { path = "../net" }
ipc = { path = "../ipc" }
wire = { path = "../wire" }
transport = { path = "../transport" }

crossbeam = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
