[package]
name = "test-harness"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
compute-api = { path = "../compute-api" }
compute = { path = "../compute" }
compute-cpu = { path = "../compute-cpu" }
layout = { path = "../layout" }
types = { path = "../types" }
compute-cuda = { path = "../compute-cuda", optional = true }
compute-hip = { path = "../compute-hip", optional = true }

[features]
default = []
cuda = ["dep:compute-cuda"]
hip = ["dep:compute-hip"]
