[package]
name = "topology"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
# Internal crates
types = { path = "../types" }
layout = { path = "../layout" }
config = { path = "../config" }
wire = { path = "../wire" }
physics = { path = "../physics" }

# External crates
glam = "=0.25.0"
rayon = { workspace = true }
rand = "=0.8.5"
rand_chacha = "=0.3.1"
