[package]
name = "weaver-daemon"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

# INV-WDAEMON-001: Zero GPU Knowledge.
# This binary MUST NOT link to compute-api, compute-cuda, compute-hip, or any GPU driver.
# Dependency on those crates is strictly forbidden.

[[bin]]
name = "weaver-daemon"
path = "src/main.rs"

[dependencies]
# Internal crates (GPU-free layer only)
types    = { path = "../types" }
layout   = { path = "../layout" }
wire     = { path = "../wire" }
ipc      = { path = "../ipc" }
topology = { path = "../topology" }
baker    = { path = "../baker" }
config   = { path = "../config" }

# External crates
clap               = { version = "4.5", features = ["derive"] }
tokio              = { workspace = true }
glam               = "=0.25.0"
rayon              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = { workspace = true }
