[package]
name = "baker-cli"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "axi-baker"
path = "src/main.rs"

[dependencies]
baker = { path = "../baker" }
config = { path = "../config" }
types = { path = "../types" }
clap = { version = "=4.5.4", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.117"
tempfile = "=3.10.1"

[dev-dependencies]
vfs = { path = "../vfs" }
