[package]
name = "ipc"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
types = { path = "../types" }
layout = { path = "../layout" }
memmap2 = "=0.9.10"
bytemuck = { version = "=1.25.0", default-features = false, features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "=0.2.182"

[dev-dependencies]
static_assertions = "=1.1.0"
serde_json = "=1.0.117"
