[package]
name = "node"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "axi-node"
path = "src/main.rs"

[dependencies]
boot = { path = "../boot" }
runtime = { path = "../runtime" }
types = { path = "../types" }
clap = { version = "=4.5.4", features = ["derive"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.117"

[dev-dependencies]
vfs = { path = "../vfs" }
tempfile = "=3.10.1"
baker = { path = "../baker" }
config = { path = "../config" }
