[package]
name = "runtime"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
compute = { path = "../compute" }
compute-api = { path = "../compute-api" }
types = { path = "../types" }
layout = { path = "../layout" }
weaver-daemon = { path = "../weaver-daemon" }
physics = { path = "../physics" }
thiserror = "=1.0.69"

[dev-dependencies]
boot = { path = "../boot" }
baker = { path = "../baker" }
config = { path = "../config" }
layout = { path = "../layout" }
bytemuck = "=1.25.0"
