[package]
name = "test-harness"
version = "0.1.0"
edition = "2021"

[lib]
name = "test_harness"

[dependencies]
types = { path = "../types" }
layout = { path = "../layout" }
compute-api = { path = "../compute-api" }
compute-cpu = { path = "../compute-cpu", optional = true }
compute = { path = "../compute", optional = true, default-features = false }
baker = { path = "../baker", optional = true }
config = { path = "../config", optional = true }
boot = { path = "../boot", optional = true }
runtime = { path = "../runtime", optional = true }
bytemuck = { version = "=1.25.0", default-features = false, features = ["derive"], optional = true }

[features]
default = ["cpu", "mock", "abi"]
cpu = ["dep:compute-cpu"]
baker-probe = ["dep:baker", "dep:config", "dep:bytemuck", "cpu"]
full-chain-probe = ["dep:baker", "dep:config", "dep:bytemuck", "cpu", "facade", "dep:boot", "dep:runtime"]
mock = []
abi = []
cuda = []
hip = []
facade = ["dep:compute", "compute/cpu"]
cuda-native = ["facade", "compute/cuda-native"]
