[package]
name = "test-harness"
version = "0.1.0"
edition = "2021"
license.workspace = true

[lib]
name = "test_harness"

[dependencies]
types = { path = "../types" }
layout = { path = "../layout" }
compute-api = { path = "../compute-api" }
compute-cpu = { path = "../compute-cpu", optional = true }
compute = { path = "../compute", optional = true, default-features = false }
baker = { path = "../baker", optional = true }
config = { path = "../config", optional = true }
boot = { path = "../boot", optional = true }
runtime = { path = "../runtime", optional = true }
bytemuck = { version = "=1.25.0", default-features = false, features = ["derive"], optional = true }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.117"
toml = { version = "=0.8.23" }
physics = { path = "../physics" }
weaver-daemon = { path = "../weaver-daemon" }

[features]
default = ["cpu", "mock", "abi"]
cpu = ["dep:compute-cpu"]
baker-probe = ["dep:baker", "dep:config", "dep:bytemuck", "cpu"]
full-chain-probe = ["dep:baker", "dep:config", "dep:bytemuck", "cpu", "facade", "dep:boot", "dep:runtime"]
local-engine-e2e-smoke = ["full-chain-probe"]
stimulus-sweep = ["full-chain-probe"]
response-map = ["full-chain-probe"]
legacy-baseline = ["full-chain-probe"]
mvp-cpu-replay = []
single-neuron-calibration = []
mock = []
abi = []
cuda = []
hip = []
facade = ["dep:compute", "compute/cpu"]
cuda-native = ["facade", "compute/cuda-native"]

[[test]]
name = "legacy_baseline"
required-features = ["legacy-baseline"]

[[test]]
name = "night_phase_vertical_slice"
required-features = ["full-chain-probe"]

[[example]]
name = "heatmap_experiment"
required-features = ["mvp-cpu-replay"]


